# youtube-tools

./: README.md  pyproject.toml
.cc/project/{{cookiecutter.project}}/: pyproject.toml
tests/test_cmds/: test_download_subtitles.py
youtube_tools/cmds/: download_subtitles.py
